# LeviLaunchroid

./: .gitignore  .gitmodules  README.md  settings.gradle
.github/workflows/: android.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: launcher.dex
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/levi_init/: CMakeLists.txt
app/src/main/cpp/levi_init/src/: Init.cpp  Runtime.cpp
app/src/main/cpp/memoryeditor/: CMakeLists.txt
app/src/main/cpp/memoryeditor/src/: memory_editor.cpp
app/src/main/cpp/newmodloading/: CMakeLists.txt
app/src/main/cpp/newmodloading/src/: main.cpp
app/src/main/cpp/unpaircore/src/: ArmDecode.h  Hook.cpp  minecraftTitle.h
app/src/main/res/drawable/: bg_abi_arm64_v8a.xml  bg_abi_armeabi_v7a.xml  bg_abi_default.xml  bg_abi_x86.xml  bg_abi_x86_64.xml  bg_btn_memory.xml  bg_btn_memory_secondary.xml  bg_edit_memory.xml  bg_edit_memory_small.xml  bg_memory_editor.xml  bg_memory_footer.xml  bg_memory_header.xml  bg_memory_item.xml  bg_memory_overlay_button.xml  bg_memory_overlay_button_active.xml  bg_spinner.xml  bg_spinner_memory.xml  ic_add.xml  ic_camera.xml  ic_hud.xml  ic_memory_editor.xml  ic_memory_overlay.xml  ic_quick_drop.xml  ic_snaplook.xml  ic_sprint.xml
app/src/main/res/drawable-night/: bg_abi_arm64_v8a.xml  bg_abi_armeabi_v7a.xml  bg_abi_default.xml  bg_abi_x86.xml  bg_abi_x86_64.xml  bg_main_amoled.xml
app/src/main/res/layout/: activity_accounts.xml  activity_content_list.xml  activity_content_management.xml  (+40 more)
gradle/: libs.versions.toml
minecraft/src/main/: AndroidManifest.xml
(+105 files in other folders)
